# reglfw

./: README.md
glfw/: CMakeLists.txt  main.c
glfw/src/: platform.c
